--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
   <div class="container">
     <h1>A Little Surprise For My Sweetest Bestfriend 💙 😚</h1>
-    <p>This journey is all about you, filled with memories, laughter, and love 💕</p>
+    <p>This journey is all about you, filled with memories, laughter, and love 💕</p> white colour 
     <button id="startBtn">Start Quiz</button>
 
     <div class="quiz" id="quizBox">
