--- a/index.html
+++ b/index.html
@@ -1,190 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Birthday Surprise - Intro</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      background: url('Background1.jpg') no-repeat center center/cover;
-      font-family: 'Poppins', sans-serif;
-      position: relative;
-    }
-
-    /* Floating blue hearts */
-    .heart {
-      position: absolute;
-      bottom: -50px;
-      font-size: 2rem;
-      color: #1e90ff;
-      animation: floatUp 8s linear infinite;
-      opacity: 0.8;
-    }
-
-    @keyframes floatUp {
-      0% { transform: translateY(0) scale(1); opacity: 0.9; }
-      50% { opacity: 1; }
-      100% { transform: translateY(-110vh) scale(1.3); opacity: 0; }
-    }
-
-    .container {
-      text-align: center;
-      margin-top: 60px; /* lifted up */
-      color: #fff;
-      z-index: 10;
-      position: relative;
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Birthday Surprise Premium - Page 1</title>
+<style>
+    body, html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        overflow: hidden;
+        background: radial-gradient(circle at center, #ffe6f0, #d1f0ff);
+        font-family: 'Arial', sans-serif;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        position: relative;
     }
 
     h1 {
-      font-size: 2.6em;
-      font-weight: bold;
-      color: #ffffff;
-      text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
-      margin-bottom: 15px;
+        font-size: 2.5em;
+        margin-bottom: 60px; /* moved up relative to cube */
+        color: #1e90ff;
+        z-index: 10;
+        text-shadow: 3px 3px 10px #fff, 0 0 15px #1e90ff;
     }
 
-    p {
-      font-size: 1.2em;
-      font-style: italic;
-      color: #ffffff;
-      text-shadow: 1px 1px 6px rgba(0,0,0,0.6);
-      margin-bottom: 25px;
+    h2 {
+        font-size: 1.6em;
+        margin-top: 60px; /* moved down relative to cube */
+        color: #ff69b4;
+        z-index: 10;
+        text-shadow: 3px 3px 10px #fff, 0 0 15px #ff69b4;
     }
 
-    .quiz h2 {
-      font-size: 1.4em;
-      font-weight: bold;
-      color: #fff;
-      text-shadow: 1px 1px 8px rgba(0,0,0,0.6);
-      margin-bottom: 20px;
+    .scene {
+        width: 400px;  /* bigger cube */
+        height: 400px; /* bigger cube */
+        perspective: 1500px;
+        z-index: 10;
+        position: relative;
     }
 
-    button {
-      padding: 12px 24px;
-      border: none;
-      border-radius: 25px;
-      font-size: 1em;
-      color: white;
-      cursor: pointer;
-      transition: 0.3s;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    .cube {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        transform-style: preserve-3d;
+        animation: rotateCube 12s infinite linear;
+        box-shadow: 0 0 50px rgba(255,255,255,0.5);
     }
 
-    #startBtn {
-      background: linear-gradient(45deg, #ff6699, #ff3366);
+    .cube-face {
+        position: absolute;
+        width: 400px;
+        height: 400px;
+        backface-visibility: hidden;
+        background-size: cover;
+        background-position: center;
+        border-radius: 15px;
+        box-shadow: 0 0 30px rgba(255,255,255,0.6), 0 0 50px rgba(255,255,255,0.3) inset;
+        border: 2px solid rgba(255,255,255,0.3);
+        overflow: hidden;
     }
 
-    #startBtn:hover {
-      background: linear-gradient(45deg, #ff99bb, #ff4d88);
-      box-shadow: 0 6px 16px rgba(255,105,180,0.6);
+    .front  { transform: rotateY(0deg) translateZ(200px); background-image: url('Saree1.jpg'); }
+    .back   { transform: rotateY(180deg) translateZ(200px); background-image: url('Saree2.jpg'); }
+    .right  { transform: rotateY(90deg) translateZ(200px); background-image: url('Saree3.jpg'); }
+    .left   { transform: rotateY(-90deg) translateZ(200px); background-image: url('Saree4.jpg'); }
+    .top    { transform: rotateX(90deg) translateZ(200px); background-image: url('Saree5.jpg'); }
+    .bottom { transform: rotateX(-90deg) translateZ(200px); background-image: url('Saree6.jpg'); }
+
+    @keyframes rotateCube {
+        0%   { transform: rotateX(0deg) rotateY(0deg); }
+        100% { transform: rotateX(360deg) rotateY(360deg); }
     }
 
-    .quiz {
-      display: none;
-      margin-top: 20px;
+    /* Balloons */
+    .balloon {
+        position: absolute;
+        bottom: -100px;
+        font-size: 2.2em;
+        animation: floatUp 12s linear infinite;
+        filter: drop-shadow(0 0 10px #fff);
+    }
+    @keyframes floatUp {
+        0% { transform: translateY(0) rotate(0deg); }
+        100% { transform: translateY(-120vh) rotate(360deg); }
     }
 
-    .quiz button {
-      display: block;
-      margin: 12px auto;
-      width: 220px;
-      background: linear-gradient(45deg, #8e44ad, #c0392b);
+    /* Floating hearts and kiss emojis */
+    .floating-emoji {
+        position: absolute;
+        font-size: 2em;
+        animation: floatEmoji 10s linear infinite;
+        opacity: 0.85;
+        text-shadow: 0 0 10px #fff, 0 0 15px #ff3366;
+    }
+    @keyframes floatEmoji {
+        0% { transform: translateY(0) rotate(0deg); }
+        100% { transform: translateY(-100vh) rotate(360deg); }
     }
 
-    .quiz button.correct {
-      background: #28a745 !important;
+    /* Confetti */
+    .confetti {
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        background-color: red;
+        opacity: 0.8;
+        z-index: 5;
+        animation: confettiFall linear infinite;
+        border-radius: 50%;
+    }
+    @keyframes confettiFall {
+        0% { transform: translateY(-10px) rotate(0deg); opacity: 1; }
+        100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
     }
 
-    .quiz button.wrong {
-      background: #e74c3c !important;
+    /* Sparkle effect */
+    .sparkle {
+        position: absolute;
+        width: 4px;
+        height: 4px;
+        background: white;
+        border-radius: 50%;
+        opacity: 0.8;
+        animation: sparkleAnim 1.5s infinite;
+    }
+    @keyframes sparkleAnim {
+        0% { transform: scale(0); opacity: 0; }
+        50% { transform: scale(1); opacity: 1; }
+        100% { transform: scale(0); opacity: 0; }
     }
 
-    .message {
-      margin-top: 15px;
-      font-size: 1.1em;
-      color: yellow;
+    /* Next button */
+    .next-btn {
+        margin-top: 40px;
+        padding: 15px 35px;
+        font-size: 1.3em;
+        border: none;
+        border-radius: 10px;
+        background: linear-gradient(90deg, #ff69b4, #1e90ff);
+        color: #fff;
+        cursor: pointer;
+        box-shadow: 0 0 20px #ff69b4, 0 0 40px #1e90ff inset;
+        transition: transform 0.3s;
+        z-index: 10;
     }
-  </style>
+    .next-btn:hover {
+        transform: scale(1.1);
+    }
+
+    @media (max-width: 500px) {
+        .scene, .cube-face {
+            width: 250px;
+            height: 250px;
+        }
+        .cube-face { transform: translateZ(125px); }
+    }
+</style>
 </head>
 <body>
-  <!-- Floating Hearts -->
-  <script>
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.classList.add("heart");
-      heart.textContent = "💙";
-      document.body.appendChild(heart);
 
-      // Random position + animation duration
-      heart.style.left = Math.random() * 100 + "vw";
-      heart.style.animationDuration = (6 + Math.random() * 4) + "s";
-      heart.style.fontSize = (20 + Math.random() * 20) + "px";
+<h1>Wishing you Happiest Birthday My Bestest Friend Forever💙🫂</h1>
 
-      setTimeout(() => {
-        heart.remove();
-      }, 10000);
-    }
-    setInterval(createHeart, 600);
-  </script>
-
-  <div class="container">
-    <h1>A Little Surprise For My Sweetest Bestfriend 💙 😚</h1>
-    <p>This journey is all about you, filled with memories, laughter, and love 💕</p> white colour 
-    <button id="startBtn">Start Quiz</button>
-
-    <div class="quiz" id="quizBox">
-      <h2>Namma 1st meet ahna place 🤔??</h2>
-      <button onclick="checkAnswer(this, 'School')">School</button>
-      <button onclick="checkAnswer(this, 'College')">College</button>
-      <button onclick="checkAnswer(this, 'Bus stop')">Bus stop</button>
-      <div class="message" id="msg"></div>
+<div class="scene">
+    <div class="cube" id="cube">
+        <div class="cube-face front"></div>
+        <div class="cube-face back"></div>
+        <div class="cube-face right"></div>
+        <div class="cube-face left"></div>
+        <div class="cube-face top"></div>
+        <div class="cube-face bottom"></div>
     </div>
-  </div>
+</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-  <script>
-    const startBtn = document.getElementById('startBtn');
-    const quizBox = document.getElementById('quizBox');
-    const msg = document.getElementById('msg');
+<h2>Thank you for being with me always di loosu</h2>
 
-    startBtn.addEventListener('click', () => {
-      quizBox.style.display = 'block';
-      startBtn.style.display = 'none';
-    });
+<!-- Audio autoplay -->
+<audio src="Friend1.mp3" autoplay loop></audio>
 
-    function checkAnswer(btn, ans) {
-      if(ans === "College") {
-        btn.classList.add("correct");
-        msg.style.color = "lightgreen";
-        msg.innerHTML = "🎉 Correct! Let’s go...";
-        launchConfetti();
-        setTimeout(() => {
-          window.location.href = "page1.html";
-        }, 2000);
-      } else {
-        btn.classList.add("wrong");
-        msg.style.color = "orange";
-        msg.innerHTML = "Oops! Wrong answer 😅";
-        setTimeout(() => {
-          btn.classList.remove("wrong");
-        }, 1000);
-      }
+<!-- Balloons -->
+<div class="balloon" style="left:10%; color:#ff4d4d;">🎈</div>
+<div class="balloon" style="left:30%; color:#ffcc00;">🎈</div>
+<div class="balloon" style="left:50%; color:#66ff66;">🎈</div>
+<div class="balloon" style="left:70%; color:#3399ff;">🎈</div>
+<div class="balloon" style="left:90%; color:#ff66ff;">🎈</div>
+
+<!-- Floating hearts and kiss emojis 😘, 😚 -->
+<div class="floating-emoji" style="left:15%; color:#ff3366;">💖</div>
+<div class="floating-emoji" style="left:35%; color:#ff6699;">😘</div>
+<div class="floating-emoji" style="left:55%; color:#ff3366;">😚</div>
+<div class="floating-emoji" style="left:75%; color:#ff6699;">💖</div>
+<div class="floating-emoji" style="left:85%; color:#ff3366;">😘</div>
+
+<!-- Next button -->
+<button class="next-btn" onclick="location.href='page2.html'">Next ➤</button>
+
+<!-- Confetti -->
+<script>
+    function createConfetti() {
+        for(let i=0; i<50; i++) {
+            let confetti = document.createElement('div');
+            confetti.className = 'confetti';
+            confetti.style.left = Math.random() * 100 + 'vw';
+            confetti.style.backgroundColor = `hsl(${Math.random()*360}, 100%, 50%)`;
+            confetti.style.animationDuration = (3 + Math.random()*5) + 's';
+            document.body.appendChild(confetti);
+            setTimeout(() => { confetti.remove(); }, 8000);
+        }
     }
+    setInterval(createConfetti, 500);
+</script>
 
-    function launchConfetti() {
-      confetti({
-        particleCount: 150,
-        spread: 70,
-        origin: { y: 0.6 }
-      });
+<!-- Sparkles on cube -->
+<script>
+    const cube = document.getElementById('cube');
+    function createSparkle() {
+        let sparkle = document.createElement('div');
+        sparkle.className = 'sparkle';
+        sparkle.style.top = Math.random() * 400 + 'px';
+        sparkle.style.left = Math.random() * 400 + 'px';
+        cube.appendChild(sparkle);
+        setTimeout(() => { sparkle.remove(); }, 1500);
     }
-  </script>
+    setInterval(createSparkle, 200);
+</script>
+
 </body>
 </html>
