--- a/page1.html
+++ b/page1.html
@@ -9,100 +9,107 @@
       margin: 0;
       padding: 0;
       background: black;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      perspective: 1200px;
+      color: white;
       font-family: 'Poppins', sans-serif;
-    }
-
-    /* Cube setup */
-    .scene {
-      width: 80vmin;
-      height: 80vmin;
-      position: relative;
-      transform-style: preserve-3d;
-      animation: rotateCube 20s infinite linear;
-    }
-
-    .face {
-      position: absolute;
-      width: 80vmin;
-      height: 80vmin;
-      backface-visibility: hidden;
-      border-radius: 12px;
+      text-align: center;
       overflow: hidden;
-      box-shadow: 0 0 20px rgba(255,255,255,0.4);
     }
 
-    .face img {
+    .top-text {
+      margin-top: 15px;
+      font-size: 20px;
+      font-weight: bold;
+      color: #00eaff;
+      text-shadow: 0 0 8px #00eaff, 0 0 16px #00eaff;
+    }
+
+    .slideshow {
+      position: relative;
+      margin: 40px auto 20px auto;
+      width: 80vw;
+      height: 60vh;
+      overflow: hidden;
+      border-radius: 15px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.3);
+    }
+
+    .slideshow img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-    }
-
-    /* Cube faces */
-    .front  { transform: rotateY(0deg) translateZ(40vmin); }
-    .back   { transform: rotateY(180deg) translateZ(40vmin); }
-    .right  { transform: rotateY(90deg) translateZ(40vmin); }
-    .left   { transform: rotateY(-90deg) translateZ(40vmin); }
-    .top    { transform: rotateX(90deg) translateZ(40vmin); }
-    .bottom { transform: rotateX(-90deg) translateZ(40vmin); }
-
-    @keyframes rotateCube {
-      from { transform: rotateX(-20deg) rotateY(0deg); }
-      to { transform: rotateX(-20deg) rotateY(360deg); }
-    }
-
-    /* Floating festive dots */
-    .dot {
       position: absolute;
-      width: 6px;
-      height: 6px;
-      border-radius: 50%;
-      opacity: 0.8;
-      animation: floatUp 8s linear infinite;
+      opacity: 0;
+      animation: slide 18s infinite;
     }
 
-    @keyframes floatUp {
-      0% { transform: translateY(100vh) scale(0.8); opacity: 1; }
-      100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
+    .slideshow img:nth-child(1) { animation-delay: 0s; }
+    .slideshow img:nth-child(2) { animation-delay: 3s; }
+    .slideshow img:nth-child(3) { animation-delay: 6s; }
+    .slideshow img:nth-child(4) { animation-delay: 9s; }
+    .slideshow img:nth-child(5) { animation-delay: 12s; }
+    .slideshow img:nth-child(6) { animation-delay: 15s; }
+
+    @keyframes slide {
+      0% { opacity: 0; }
+      10% { opacity: 1; }
+      30% { opacity: 1; }
+      40% { opacity: 0; }
+      100% { opacity: 0; }
     }
 
-    /* Glowing Text */
-    .top-text, .bottom-text {
-      position: absolute;
-      width: 100%;
-      text-align: center;
-      font-size: 20px;
+    .bottom-text {
+      font-size: 18px;
+      margin: 10px 0 20px 0;
+      color: #ffb6ff;
+      text-shadow: 0 0 8px #ff69b4;
+    }
+
+    .quiz {
+      margin-bottom: 30px;
+    }
+
+    input[type="date"] {
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+      font-size: 16px;
+    }
+
+    button {
+      margin-left: 10px;
+      padding: 10px 18px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      background: #00eaff;
+      color: black;
       font-weight: bold;
-      color: white;
-      text-shadow: 0 0 8px #0ff, 0 0 16px #0ff;
-      padding: 5px 15px;
     }
-
-    .top-text { top: 12px; }
-    .bottom-text { bottom: 12px; }
   </style>
 </head>
 <body>
-  <!-- Top Text -->
   <div class="top-text">Wishing you Happiest Birthday My Bestest Friend Forever💙🫂</div>
 
-  <!-- Rotating Cube -->
-  <div class="scene">
-    <div class="face front"><img src="Saree1.jpg" alt=""></div>
-    <div class="face back"><img src="Saree2.jpg" alt=""></div>
-    <div class="face right"><img src="Saree3.jpg" alt=""></div>
-    <div class="face left"><img src="Saree4.jpg" alt=""></div>
-    <div class="face top"><img src="Saree5.jpg" alt=""></div>
-    <div class="face bottom"><img src="Saree6.jpg" alt=""></div>
+  <!-- Rotating Photos -->
+  <div class="slideshow">
+    <img src="Saree1.jpg" alt="">
+    <img src="Saree2.jpg" alt="">
+    <img src="Saree3.jpg" alt="">
+    <img src="Saree4.jpg" alt="">
+    <img src="Saree5.jpg" alt="">
+    <img src="Saree6.jpg" alt="">
   </div>
 
-  <!-- Bottom Text -->
   <div class="bottom-text">Thank you for being with me always di loosu 🤗</div>
+
+  <!-- Quiz -->
+  <div class="quiz">
+    <label for="dob">Enter your DOB 🎂:</label><br><br>
+    <input type="date" id="dob">
+    <button onclick="checkDOB()">Submit</button>
+  </div>
 
   <!-- Autoplay Music -->
   <audio id="bg-music" autoplay loop>
@@ -110,19 +117,19 @@
   </audio>
 
   <script>
-    // Floating festive dots
-    function createDot() {
-      const dot = document.createElement("div");
-      dot.classList.add("dot");
-      document.body.appendChild(dot);
-      dot.style.left = Math.random() * 100 + "vw";
-      dot.style.background = ["red","blue","green","yellow","cyan","purple","pink"][Math.floor(Math.random()*7)];
-      dot.style.animationDuration = (5 + Math.random()*5) + "s";
-      setTimeout(() => dot.remove(), 8000);
-    }
-    setInterval(createDot, 400);
+    // Correct DOB (yyyy-mm-dd format)
+    const correctDOB = "2003-10-07"; // change to her real DOB
 
-    // Autoplay workaround for mobile (starts on first touch)
+    function checkDOB() {
+      const userDOB = document.getElementById("dob").value;
+      if (userDOB === correctDOB) {
+        window.location.href = "page2.html"; // next page
+      } else {
+        alert("Oops! Try again 😜");
+      }
+    }
+
+    // Autoplay fix for mobile
     const audio = document.getElementById("bg-music");
     document.body.addEventListener("click", () => {
       audio.play();
