--- a/page1.html
+++ b/page1.html
@@ -3,137 +3,208 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Birthday Surprise - Page 1</title>
+  <title>Birthday Surprise</title>
   <style>
     body {
       margin: 0;
       padding: 0;
+      overflow: hidden;
       background: black;
-      color: white;
-      font-family: 'Poppins', sans-serif;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       text-align: center;
-      overflow: hidden;
+      font-family: Arial, sans-serif;
+      color: white;
     }
 
-    .top-text {
-      margin-top: 15px;
-      font-size: 20px;
-      font-weight: bold;
-      color: #00eaff;
-      text-shadow: 0 0 8px #00eaff, 0 0 16px #00eaff;
-    }
-
-    .slideshow {
-      position: relative;
-      margin: 40px auto 20px auto;
-      width: 80vw;
-      height: 60vh;
-      overflow: hidden;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(255,255,255,0.3);
-    }
-
-    .slideshow img {
+    /* Star Background */
+    .stars {
+      position: fixed;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      top: 0;
+      left: 0;
+      background: black;
+      z-index: -2;
+    }
+    .star {
       position: absolute;
-      opacity: 0;
-      animation: slide 18s infinite;
+      background: white;
+      border-radius: 50%;
+      animation: twinkle 3s infinite ease-in-out;
+    }
+    @keyframes twinkle {
+      0%, 100% { opacity: 0.2; }
+      50% { opacity: 1; }
     }
 
-    .slideshow img:nth-child(1) { animation-delay: 0s; }
-    .slideshow img:nth-child(2) { animation-delay: 3s; }
-    .slideshow img:nth-child(3) { animation-delay: 6s; }
-    .slideshow img:nth-child(4) { animation-delay: 9s; }
-    .slideshow img:nth-child(5) { animation-delay: 12s; }
-    .slideshow img:nth-child(6) { animation-delay: 15s; }
-
-    @keyframes slide {
-      0% { opacity: 0; }
-      10% { opacity: 1; }
-      30% { opacity: 1; }
-      40% { opacity: 0; }
-      100% { opacity: 0; }
+    /* Confetti */
+    .confetti {
+      position: fixed;
+      width: 10px;
+      height: 10px;
+      background-color: red;
+      top: -10px;
+      animation: fall 5s linear infinite;
+    }
+    @keyframes fall {
+      0% { transform: translateY(0) rotate(0deg); }
+      100% { transform: translateY(100vh) rotate(720deg); }
     }
 
-    .bottom-text {
+    h1 {
+      margin: 15px 0;
+      font-size: 22px;
+      color: #00e5ff;
+      text-shadow: 0 0 10px #00e5ff, 0 0 20px #00e5ff;
+    }
+
+    .scene {
+      flex: 1;
+      perspective: 1200px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .cube {
+      position: relative;
+      width: 90vw;
+      height: 80vh;
+      transform-style: preserve-3d;
+      animation: rotateCube 30s infinite linear;
+    }
+
+    .cube div {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-position: center;
+      border-radius: 15px;
+    }
+
+    .front  { transform: rotateY(0deg) translateZ(45vw);  background-image: url('Saree1.jpg'); }
+    .back   { transform: rotateY(180deg) translateZ(45vw); background-image: url('Saree2.jpg'); }
+    .right  { transform: rotateY(90deg) translateZ(45vw);  background-image: url('Saree3.jpg'); }
+    .left   { transform: rotateY(-90deg) translateZ(45vw); background-image: url('Saree4.jpg'); }
+    .top    { transform: rotateX(90deg) translateZ(40vh);  background-image: url('Saree5.jpg'); }
+    .bottom { transform: rotateX(-90deg) translateZ(40vh); background-image: url('Saree6.jpg'); }
+
+    @keyframes rotateCube {
+      0% { transform: rotateY(0deg) rotateX(0deg); }
+      20% { transform: rotateY(-90deg) rotateX(0deg); }
+      40% { transform: rotateY(-180deg) rotateX(0deg); }
+      60% { transform: rotateY(-270deg) rotateX(0deg); }
+      80% { transform: rotateY(-360deg) rotateX(-90deg); }
+      100% { transform: rotateY(-360deg) rotateX(-180deg); }
+    }
+
+    p {
+      margin: 15px 0;
       font-size: 18px;
-      margin: 10px 0 20px 0;
-      color: #ffb6ff;
-      text-shadow: 0 0 8px #ff69b4;
+      color: #ff4dd2;
+      text-shadow: 0 0 8px #ff80d5;
     }
 
+    /* Quiz Box */
     .quiz {
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
-
     input[type="date"] {
-      padding: 10px;
-      border-radius: 8px;
+      padding: 8px;
+      border-radius: 6px;
       border: none;
-      outline: none;
       font-size: 16px;
     }
-
     button {
+      padding: 8px 16px;
       margin-left: 10px;
-      padding: 10px 18px;
-      font-size: 16px;
+      background: cyan;
       border: none;
-      border-radius: 8px;
+      border-radius: 6px;
+      font-size: 16px;
       cursor: pointer;
-      background: #00eaff;
-      color: black;
-      font-weight: bold;
+    }
+    button:hover {
+      background: #00bcd4;
     }
   </style>
 </head>
 <body>
-  <div class="top-text">Wishing you Happiest Birthday My Bestest Friend Forever💙🫂</div>
 
-  <!-- Rotating Photos -->
-  <div class="slideshow">
-    <img src="Saree1.jpg" alt="">
-    <img src="Saree2.jpg" alt="">
-    <img src="Saree3.jpg" alt="">
-    <img src="Saree4.jpg" alt="">
-    <img src="Saree5.jpg" alt="">
-    <img src="Saree6.jpg" alt="">
+  <!-- Stars background -->
+  <div class="stars"></div>
+
+  <!-- Confetti elements (JS will generate multiple) -->
+
+  <h1>Wishing you Happiest Birthday My Bestest Friend Forever💙🫂</h1>
+
+  <div class="scene">
+    <div class="cube">
+      <div class="front"></div>
+      <div class="back"></div>
+      <div class="right"></div>
+      <div class="left"></div>
+      <div class="top"></div>
+      <div class="bottom"></div>
+    </div>
   </div>
 
-  <div class="bottom-text">Thank you for being with me always di loosu 🤗</div>
+  <p>Thank you for being with me always di loosu 🤗</p>
 
   <!-- Quiz -->
   <div class="quiz">
-    <label for="dob">Enter your DOB 🎂:</label><br><br>
+    <label for="dob">Enter your DOB 🎂:</label>
     <input type="date" id="dob">
     <button onclick="checkDOB()">Submit</button>
   </div>
 
-  <!-- Autoplay Music -->
-  <audio id="bg-music" autoplay loop>
-    <source src="Friend1.mp3" type="audio/mpeg">
-  </audio>
-
   <script>
-    // Correct DOB (yyyy-mm-dd format)
-    const correctDOB = "2003-10-07"; // change to her real DOB
-
-    function checkDOB() {
-      const userDOB = document.getElementById("dob").value;
-      if (userDOB === correctDOB) {
-        window.location.href = "page2.html"; // next page
-      } else {
-        alert("Oops! Try again 😜");
+    // Star generator
+    function createStars() {
+      const stars = document.querySelector('.stars');
+      for (let i = 0; i < 80; i++) {
+        let star = document.createElement('div');
+        star.classList.add('star');
+        let size = Math.random() * 3 + 'px';
+        star.style.width = size;
+        star.style.height = size;
+        star.style.top = Math.random() * 100 + '%';
+        star.style.left = Math.random() * 100 + '%';
+        star.style.animationDuration = (Math.random() * 3 + 2) + 's';
+        stars.appendChild(star);
       }
     }
 
-    // Autoplay fix for mobile
-    const audio = document.getElementById("bg-music");
-    document.body.addEventListener("click", () => {
-      audio.play();
-    }, { once: true });
+    // Confetti generator
+    function createConfetti() {
+      for (let i = 0; i < 40; i++) {
+        let confetti = document.createElement('div');
+        confetti.classList.add('confetti');
+        confetti.style.left = Math.random() * 100 + 'vw';
+        confetti.style.backgroundColor = `hsl(${Math.random() * 360},100%,50%)`;
+        confetti.style.animationDuration = (Math.random() * 3 + 2) + 's';
+        document.body.appendChild(confetti);
+      }
+    }
+
+    // Quiz DOB check
+    function checkDOB() {
+      const correctDOB = "2003-11-07"; // her DOB YYYY-MM-DD
+      const enteredDOB = document.getElementById("dob").value;
+      if (enteredDOB === correctDOB) {
+        alert("🎉 Correct! Moving to next page...");
+        window.location.href = "page2.html"; // change link to your next surprise page
+      } else {
+        alert("❌ Wrong DOB! Try again 🤭");
+      }
+    }
+
+    createStars();
+    createConfetti();
   </script>
 </body>
 </html>
