--- a/page1.html
+++ b/page1.html
@@ -1,117 +1,71 @@
-<!DOCTYPE html>
+        <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Birthday Surprise</title>
+  <title>Birthday Surprise - Page 1</title>
   <style>
-    body {
+    body, html {
       margin: 0;
       padding: 0;
+      height: 100%;
       overflow: hidden;
-      background: black;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      text-align: center;
       font-family: Arial, sans-serif;
+      background: black;
       color: white;
+      text-align: center;
     }
 
-    /* Star Background */
-    .stars {
+    /* Fullscreen Slideshow */
+    .slideshow {
       position: fixed;
-      width: 100%;
-      height: 100%;
       top: 0;
       left: 0;
-      background: black;
-      z-index: -2;
-    }
-    .star {
-      position: absolute;
-      background: white;
-      border-radius: 50%;
-      animation: twinkle 3s infinite ease-in-out;
-    }
-    @keyframes twinkle {
-      0%, 100% { opacity: 0.2; }
-      50% { opacity: 1; }
+      width: 100%;
+      height: 100%;
+      z-index: -1;
     }
 
-    /* Confetti */
-    .confetti {
-      position: fixed;
-      width: 10px;
-      height: 10px;
-      background-color: red;
-      top: -10px;
-      animation: fall 5s linear infinite;
+    .slideshow img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      opacity: 0;
+      animation: fade 36s infinite;
     }
-    @keyframes fall {
-      0% { transform: translateY(0) rotate(0deg); }
-      100% { transform: translateY(100vh) rotate(720deg); }
+
+    .slideshow img:nth-child(1) { animation-delay: 0s; }
+    .slideshow img:nth-child(2) { animation-delay: 6s; }
+    .slideshow img:nth-child(3) { animation-delay: 12s; }
+    .slideshow img:nth-child(4) { animation-delay: 18s; }
+    .slideshow img:nth-child(5) { animation-delay: 24s; }
+    .slideshow img:nth-child(6) { animation-delay: 30s; }
+
+    @keyframes fade {
+      0% { opacity: 0; }
+      10% { opacity: 1; }
+      25% { opacity: 1; }
+      35% { opacity: 0; }
+      100% { opacity: 0; }
     }
 
     h1 {
-      margin: 15px 0;
-      font-size: 22px;
+      margin-top: 20px;
+      font-size: 24px;
       color: #00e5ff;
       text-shadow: 0 0 10px #00e5ff, 0 0 20px #00e5ff;
     }
 
-    .scene {
-      flex: 1;
-      perspective: 1200px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .cube {
-      position: relative;
-      width: 90vw;
-      height: 80vh;
-      transform-style: preserve-3d;
-      animation: rotateCube 30s infinite linear;
-    }
-
-    .cube div {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-size: cover;
-      background-position: center;
-      border-radius: 15px;
-    }
-
-    .front  { transform: rotateY(0deg) translateZ(45vw);  background-image: url('Saree1.jpg'); }
-    .back   { transform: rotateY(180deg) translateZ(45vw); background-image: url('Saree2.jpg'); }
-    .right  { transform: rotateY(90deg) translateZ(45vw);  background-image: url('Saree3.jpg'); }
-    .left   { transform: rotateY(-90deg) translateZ(45vw); background-image: url('Saree4.jpg'); }
-    .top    { transform: rotateX(90deg) translateZ(40vh);  background-image: url('Saree5.jpg'); }
-    .bottom { transform: rotateX(-90deg) translateZ(40vh); background-image: url('Saree6.jpg'); }
-
-    @keyframes rotateCube {
-      0% { transform: rotateY(0deg) rotateX(0deg); }
-      20% { transform: rotateY(-90deg) rotateX(0deg); }
-      40% { transform: rotateY(-180deg) rotateX(0deg); }
-      60% { transform: rotateY(-270deg) rotateX(0deg); }
-      80% { transform: rotateY(-360deg) rotateX(-90deg); }
-      100% { transform: rotateY(-360deg) rotateX(-180deg); }
-    }
-
     p {
-      margin: 15px 0;
+      margin: 10px 0;
       font-size: 18px;
-      color: #ff4dd2;
-      text-shadow: 0 0 8px #ff80d5;
+      color: #ff66cc;
+      text-shadow: 0 0 8px #ff99cc;
     }
 
-    /* Quiz Box */
     .quiz {
-      margin-bottom: 20px;
+      margin-top: 20px;
     }
     input[type="date"] {
       padding: 8px;
@@ -131,28 +85,40 @@
     button:hover {
       background: #00bcd4;
     }
+
+    /* Confetti */
+    .confetti {
+      position: fixed;
+      width: 10px;
+      height: 10px;
+      top: -10px;
+      animation: fall 5s linear infinite;
+    }
+    @keyframes fall {
+      0% { transform: translateY(0) rotate(0deg); }
+      100% { transform: translateY(100vh) rotate(720deg); }
+    }
   </style>
 </head>
 <body>
 
-  <!-- Stars background -->
-  <div class="stars"></div>
+  <!-- Background Music -->
+  <audio autoplay loop>
+    <source src="Friend1.mp3" type="audio/mpeg">
+  </audio>
 
-  <!-- Confetti elements (JS will generate multiple) -->
-
-  <h1>Wishing you Happiest Birthday My Bestest Friend Forever💙🫂</h1>
-
-  <div class="scene">
-    <div class="cube">
-      <div class="front"></div>
-      <div class="back"></div>
-      <div class="right"></div>
-      <div class="left"></div>
-      <div class="top"></div>
-      <div class="bottom"></div>
-    </div>
+  <!-- Slideshow -->
+  <div class="slideshow">
+    <img src="Saree1.jpg" alt="">
+    <img src="Saree2.jpg" alt="">
+    <img src="Saree3.jpg" alt="">
+    <img src="Saree4.jpg" alt="">
+    <img src="Saree5.jpg" alt="">
+    <img src="Saree6.jpg" alt="">
   </div>
 
+  <!-- Text -->
+  <h1>Wishing you Happiest Birthday My Bestest Friend Forever💙🫂</h1>
   <p>Thank you for being with me always di loosu 🤗</p>
 
   <!-- Quiz -->
@@ -163,22 +129,6 @@
   </div>
 
   <script>
-    // Star generator
-    function createStars() {
-      const stars = document.querySelector('.stars');
-      for (let i = 0; i < 80; i++) {
-        let star = document.createElement('div');
-        star.classList.add('star');
-        let size = Math.random() * 3 + 'px';
-        star.style.width = size;
-        star.style.height = size;
-        star.style.top = Math.random() * 100 + '%';
-        star.style.left = Math.random() * 100 + '%';
-        star.style.animationDuration = (Math.random() * 3 + 2) + 's';
-        stars.appendChild(star);
-      }
-    }
-
     // Confetti generator
     function createConfetti() {
       for (let i = 0; i < 40; i++) {
@@ -193,17 +143,16 @@
 
     // Quiz DOB check
     function checkDOB() {
-      const correctDOB = "2003-11-07"; // her DOB YYYY-MM-DD
+      const correctDOB = "2003-10-07"; // her DOB YYYY-MM-DD
       const enteredDOB = document.getElementById("dob").value;
       if (enteredDOB === correctDOB) {
         alert("🎉 Correct! Moving to next page...");
-        window.location.href = "page2.html"; // change link to your next surprise page
+        window.location.href = "page2.html"; 
       } else {
         alert("❌ Wrong DOB! Try again 🤭");
       }
     }
 
-    createStars();
     createConfetti();
   </script>
 </body>
