--- a/page1.html
+++ b/page1.html
@@ -16,13 +16,13 @@
       text-align: center;
     }
 
-    /* Fullscreen Slideshow */
+    /* center Slideshow */
     .slideshow {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 70%;
       z-index: -1;
     }
 
