--- a/page1.html
+++ b/page1.html
@@ -11,7 +11,7 @@
       color: white;
       font-family: 'Arial', sans-serif;
       text-align: center;
-      overflow: hidden;
+      overflow-x: hidden;
     }
     h1 {
       font-size: 30px;
@@ -20,18 +20,18 @@
       text-shadow: 2px 2px 8px #000;
     }
     .slideshow {
-      width: 800px;   /* much bigger width */
-      height: 600px;  /* much bigger height */
-      margin: 30px auto;
+      width: 900px;    /* bigger width */
+      height: 1200px;  /* doubled height */
+      margin: 20px auto;
       position: relative;
       overflow: hidden;
       border-radius: 20px;
-      box-shadow: 0 0 30px rgba(255,255,255,0.7);
+      box-shadow: 0 0 40px rgba(255,255,255,0.7);
     }
     .slideshow img {
       width: 100%;
       height: 100%;
-      object-fit: cover; /* keeps full photo, fills box */
+      object-fit: cover; /* fills box neatly */
       position: absolute;
       left: 0;
       top: 0;
@@ -54,7 +54,7 @@
     }
 
     .bottom-text {
-      font-size: 22px;
+      font-size: 24px;
       margin-top: 15px;
       color: #ffda6a;
       text-shadow: 1px 1px 5px #000;
@@ -122,7 +122,7 @@
 
   <script>
     // Correct DOB (format: yyyy-mm-dd)
-    const correctDOB = "2000-10-07"; // <-- change to her real DOB
+    const correctDOB = "2000-05-10"; // <-- change to her real DOB
 
     function checkDOB() {
       const input = document.getElementById("dobInput").value;
