--- a/page2.html
+++ b/page2.html
@@ -5,13 +5,18 @@
   <title>Birthday Surprise Page 3</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
-      background: url('Bg.jpg') no-repeat center center/cover;
-      color: white;
-      text-align: center;
-      overflow: hidden;
+  margin: 0;
+  padding: 0;
+  font-family: 'Comic Sans MS', cursive, sans-serif;
+  background: url('Bg.jpg') no-repeat center center;
+  background-size: cover;     /* Cover full screen */
+  background-attachment: fixed;
+  background-position: center;
+  height: 100vh;              /* Full height */
+  width: 100vw;               /* Full width */
+  color: white;
+  text-align: center;
+  overflow: hidden;
     }
     h1 {
       margin-top: 40px;
